--- a/hello.html
+++ b/hello.html
@@ -1,6 +1,23 @@
-<!doctype html>
-<html>
-  <head>
-    hello
-  </body>
+<!DOCTYPE html>
+<html lang="ja">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>vue.js demo</title>
+    </head>
+    <body>
+    <div id="app">
+        <input v-model="message">
+        <p>{{ message }}</p>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.2.0/vue.js"></script>
+    <script>
+        var app = new Vue({
+            el: '#app',
+            data: {
+                message:''
+            }
+        })
+    </script>
+</body>
 </html>
