--- a/hello.html
+++ b/hello.html
@@ -19,6 +19,6 @@
             }
         })
     </script>
-        <img src="https://github.com/atekiteki/atekiteki.github.io/blob/master/IMG_1847_Fotor.jpg?raw=true" alt="サンプル">
+        <img src="IMG_1847_Fotor.jpg?raw=true" alt="サンプル">
 </body>
 </html>
