--- a/works/index.html
+++ b/works/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>About</title>
+  <link rel="stylesheet" href="../css/style.css">
+</head>
+<body>
+  <h1>About</h1>
+  <nav>
+    <ul>
+      <li><a href="../">Home</a></li>
+      <li><a href="../works/">Works</a></li>
+      <li><a href="../contact/">Contact</a></li>
+    </ul>
+  </nav>
+  <p>This is the about page.</p>
+</body>
+</html>
