--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li><a href="about/">About</a></li>
       <li><a href="works/">Works</a></li>
       <li><a href="contact/">Contact</a></li>
+      <li><a href="another/">Another</a></li>
     </ul>
   </nav>
   <p>This is the main page of my website.</p>
