--- a/another/index.html
+++ b/another/index.html
@@ -1,1 +1,16 @@
-
+<!-- トヨタ株価ウィジェット -->
+<div class="tradingview-widget-container">
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js" async>
+  {
+    "symbol": "TSE:7203",
+    "width": "100%",
+    "height": "220",
+    "locale": "ja",
+    "dateRange": "1D",
+    "colorTheme": "light",
+    "isTransparent": false,
+    "autosize": true,
+    "largeChartUrl": ""
+  }
+  </script>
+</div>
